--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <p>
-        Hola mundoeste es mi sitio web,
+        Hola amigos este es mi sitio web,
         voy a empezar a programar
     </p>
 </body>
